1. Made it work for all devices. 2. Changed working logic.

--- a/trafficLights/Base.lproj/Main.storyboard
+++ b/trafficLights/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
-    <device id="retina6_1" orientation="portrait" appearance="light"/>
+    <device id="retina5_9" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -13,50 +13,89 @@
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="trafficLights" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="KXy-eD-lQW">
-                                <rect key="frame" x="132" y="284" width="150" height="150"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="backgroundColor" systemColor="systemYellowColor"/>
-                            </view>
-                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="GXv-mx-68b">
-                                <rect key="frame" x="132" y="486" width="150" height="150"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="backgroundColor" systemColor="systemGreenColor"/>
-                            </view>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HSL-bR-iVc">
-                                <rect key="frame" x="174" y="731" width="67" height="31"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
-                                <state key="normal" title="Button"/>
-                                <connections>
-                                    <action selector="controlButtonAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="p2x-Te-zE1"/>
-                                </connections>
-                            </button>
-                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="qW2-ZS-m6B">
-                                <rect key="frame" x="132" y="82" width="150" height="150"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="backgroundColor" systemColor="systemRedColor"/>
-                            </view>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalCentering" spacing="42" translatesAutoresizingMaskIntoConstraints="NO" id="VaJ-3J-uTK">
+                                <rect key="frame" x="141" y="116" width="93" height="408"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qW2-ZS-m6B">
+                                        <rect key="frame" x="0.0" y="0.0" width="93" height="93"/>
+                                        <color key="backgroundColor" systemColor="systemRedColor"/>
+                                        <rect key="contentStretch" x="0.0" y="0.0" width="0.0" height="0.0"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" secondItem="qW2-ZS-m6B" secondAttribute="height" multiplier="1:1" id="HcP-LD-Bba"/>
+                                            <constraint firstAttribute="height" relation="lessThanOrEqual" constant="146" id="S6S-ha-hKh"/>
+                                        </constraints>
+                                    </view>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="KXy-eD-lQW">
+                                        <rect key="frame" x="0.0" y="157.66666666666669" width="93" height="93"/>
+                                        <color key="backgroundColor" systemColor="systemYellowColor"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" relation="lessThanOrEqual" constant="146" id="c8X-6q-KkC"/>
+                                            <constraint firstAttribute="width" secondItem="KXy-eD-lQW" secondAttribute="height" multiplier="1:1" id="oAR-MG-r7K"/>
+                                        </constraints>
+                                    </view>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="GXv-mx-68b">
+                                        <rect key="frame" x="0.0" y="315" width="93" height="93"/>
+                                        <color key="backgroundColor" systemColor="systemGreenColor"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" secondItem="GXv-mx-68b" secondAttribute="height" multiplier="1:1" id="AuI-YX-Ays"/>
+                                            <constraint firstAttribute="height" relation="lessThanOrEqual" constant="146" id="D2c-Vm-5Kp"/>
+                                        </constraints>
+                                    </view>
+                                </subviews>
+                            </stackView>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="WD9-vh-hbf">
+                                <rect key="frame" x="138.66666666666666" y="656" width="97" height="38"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HSL-bR-iVc">
+                                        <rect key="frame" x="0.0" y="0.0" width="97" height="38"/>
+                                        <color key="backgroundColor" systemColor="systemBrownColor"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" relation="lessThanOrEqual" constant="150" id="0eX-Az-XKg"/>
+                                            <constraint firstAttribute="height" relation="lessThanOrEqual" constant="50" id="ICa-Xl-jED"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="21"/>
+                                        <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                        <state key="normal" title="START">
+                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="controlButtonAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="p2x-Te-zE1"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                            </stackView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="WD9-vh-hbf" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="138.66666666666663" id="7Um-05-Hd2"/>
+                            <constraint firstItem="VaJ-3J-uTK" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="72" id="9v2-pE-W8I"/>
+                            <constraint firstItem="VaJ-3J-uTK" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="141" id="Fs9-RS-QHc"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="WD9-vh-hbf" secondAttribute="trailing" constant="139.33333333333337" id="GLA-Mj-dZE"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="VaJ-3J-uTK" secondAttribute="trailing" constant="141" id="QHH-R1-GNb"/>
+                            <constraint firstItem="WD9-vh-hbf" firstAttribute="top" secondItem="VaJ-3J-uTK" secondAttribute="bottom" constant="132" id="aVb-TB-LAk"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="WD9-vh-hbf" secondAttribute="bottom" constant="84" id="ldt-qY-Xse"/>
+                        </constraints>
                     </view>
                     <connections>
                         <outlet property="controlButton" destination="HSL-bR-iVc" id="3hA-Nh-AdW"/>
-                        <outlet property="greenLight" destination="GXv-mx-68b" id="zYo-ki-a7r"/>
-                        <outlet property="redLight" destination="KXy-eD-lQW" id="V4j-uc-g1c"/>
-                        <outlet property="yellowLight" destination="GXv-mx-68b" id="5xt-iX-vBT"/>
+                        <outlet property="greenLight" destination="GXv-mx-68b" id="qJf-zI-Fuc"/>
+                        <outlet property="redLight" destination="qW2-ZS-m6B" id="xTS-p8-X2s"/>
+                        <outlet property="yellowLight" destination="KXy-eD-lQW" id="ZZO-Q4-YlP"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="20" y="80"/>
+            <point key="canvasLocation" x="18.22429906542056" y="79.049676025917933"/>
         </scene>
     </scenes>
     <resources>
+        <systemColor name="systemBrownColor">
+            <color red="0.63529411764705879" green="0.51764705882352946" blue="0.36862745098039218" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
         <systemColor name="systemGreenColor">
             <color red="0.20392156862745098" green="0.7803921568627451" blue="0.34901960784313724" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
